--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% from 'bootstrap5/form.html' import render_form %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,50 +8,174 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="../static/Css/styling.css" rel="stylesheet">
 </head>
 <body>
-       <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">Ajiboye William</span>
-            </a>
 
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+       <div>
+        <header>
+            <a href="/" class="logo">Ajiboye William</a>
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About" >About</a></li>
+                <li><a href="#Projects" >Projects</a></li>
+                <li><a href="#Experiences" >Experience</a></li>
+                <li><a href="#Contact" >Contact</a></li>
+
+
             </ul>
+
+
         </header>
        </div>
-    <section class="Home">
-        <div class="home-img">
-            <img src="../static/Images/IMG_1955.jpg" alt="Picture of William Ajiboye">
-        </div>
-        <div class="home-content">
-            <h1>Hi, i'm <span>William</span></h1>
-            <h3 class="description-text">I'm a <span>Software Developer</span></h3> 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Nam vestibulum maximus rhoncus. Proin interdum ullamcorper dui ultrices lacinia. Nunc pulvinar, sapien eget pharetra dapibus, turpis magna tempor lacus, sit amet pulvinar turpis risus vitae orci. Mauris non orci ornare arcu molestie bibendum. Duis tincidunt augue quis nunc tincidunt, id dictum dui scelerisque. Vivamus consectetur sapien enim, ut ornare elit pretium at. Vivamus neque odio, rhoncus vestibulum finibus vel, iaculis sed orci. Maecenas nisl nibh, accumsan nec vehicula quis, viverra vel nisl. Nullam mollis egestas augue. Aliquam dignissim elit nec ultricies ultricies.</p>
-            <div class="social-icons">
-                <a href="https://github.com/WilliamAjiboye" target="_blank" title="Github">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/ajiboye-william-526533282/" target="_blank" title="Linkedin">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
+
+
+
+    <section id="Home">
+        <div class="container">
+            <div class="row">
+            <div class="home-img col-3">
+                <img src="../static/Images/image%20of%20me%20in%20uniform.png" alt="Picture of William Ajiboye">
             </div>
-            <a href="#" class="btn">Hire Me</a>
+            <div class="home-content col-9">
+                <h1>Hi, i'm <span id="My-Name">William</span></h1>
+                <div class="description-text">
+                    <span class="text first-text">I'm a</span>
+                    <span class="text sec-text"></span>
+                </div>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Nam vestibulum maximus rhoncus. Proin interdum ullamcorper dui ultrices lacinia. Nunc pulvinar, sapien eget pharetra dapibus, turpis magna tempor lacus, sit amet pulvinar turpis risus vitae orci. Mauris non orci ornare arcu molestie bibendum. Duis tincidunt augue quis nunc tincidunt, id dictum dui scelerisque. Vivamus consectetur sapien enim, ut ornare elit pretium at. Vivamus neque odio, rhoncus vestibulum finibus vel, iaculis sed orci. Maecenas nisl nibh, accumsan nec vehicula quis, viverra vel nisl. Nullam mollis egestas augue. Aliquam dignissim elit nec ultricies ultricies.</p>
+            <div class="social-icons">
+                    <a href="https://github.com/WilliamAjiboye" target="_blank" title="Github">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ajiboye-william-526533282/" target="_blank" title="Linkedin">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+                <button><a href="#Contact">Hire Me</a></button>
+            </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="About">
+        <div class="container">
+            <div class="row">
+                <div class="col-9">
+                    <div>
+                        <h2>About Me</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Nam vestibulum maximus rhoncus. Proin interdum ullamcorper dui ultrices lacinia. Nunc pulvinar, sapien eget pharetra dapibus, turpis magna tempor lacus, sit amet pulvinar turpis risus vitae orci. Mauris non orci ornare arcu molestie bibendum. Duis tincidunt augue quis nunc tincidunt, id dictum dui scelerisque. Vivamus consectetur sapien enim, ut ornare elit pretium at. Vivamus neque odio, rhoncus vestibulum finibus vel, iaculis sed orci. Maecenas nisl nibh, accumsan nec vehicula quis, viverra vel nisl. Nullam mollis egestas augue. Aliquam dignissim elit nec ultricies ultricies.</p>
+                    </div>
+                    <div><button>Download My CV</button></div>
+                </div>
+
+                <div class="col-3">
+                    <img src="../static/Images/image%20of%20me%20as%20a%20child.jpg" alt="Picture Of William Ajiboye">
+                </div>
+
+            </div>
+
         </div>
 
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
+
+    <section id="Projects">
+        <div><h2>COMING SOOOOON!!!</h2></div>
+    </section>
+
+    <section id="Experiences">
+        <div><h2>COMING SOOOOON!!!</h2></div>
+    </section>
+
+    <section id="Contact">
+        <div id="form">
+            <form id='contactmeform' method="post" action="/">
+                <div class="">
+                    <h2>CONTACT ME</h2>
+                    <label for="Name">Name</label>
+                    <input id="Name" name="Name" type="text" required/>
+                    <br/>
+                    <label for="Email">Email</label>
+                    <input id="Email" name="Email" type="text" required>
+                    <br/>
+                    <label for="Message">Message</label>
+                    <input id="Message" name="Message", type="text" required>
+                    <br/>
+                    <button id="submitButton" type="submit">Submit</button>
+                </div>
+
+            </form>
+        </div>
+
+    </section>
+
+
+        <footer>
+            <ul class="social-icons">
+                <li><a href="https://github.com/WilliamAjiboye"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ajiboye-william-526533282/"><i class="bi bi-linkedin"></i></a></li>
+            </ul>
+
+
+        </footer>
+
+
+
+<!--        <div class="container">-->
+
+
+
+<!--            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">-->
+
+<!--                <div class="col-md-4 d-flex align-items-center">-->
+<!--                    <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">-->
+<!--                        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>-->
+<!--                    </a>-->
+<!--                    <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>-->
+<!--                </div>-->
+
+<!--                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">-->
+<!--                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
+<!--                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
+<!--                    <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>-->
+<!--                </ul>-->
+<!--            </footer>-->
+<!--        </div>-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+    const text= document.querySelector('.sec-text');
+    const textLoad = ()=>{
+        setTimeout(()=> {
+            text.textContent = 'Software Developer'
+        },0);
+        setTimeout(()=> {
+            text.textContent = 'Mechatronics Engineer'
+        },4000);
+        setTimeout(()=> {
+            text.textContent = 'AI Developer'
+        },8000);
+        setTimeout(()=> {
+            text.textContent = 'Student'
+        },12000);
+    }
+    textLoad();
+    setInterval(textLoad,12000);
+    </script>
+
     </body>
 </html>
