--- a/templates/home.html
+++ b/templates/home.html
@@ -167,11 +167,8 @@
             text.textContent = 'Mechatronics Engineer'
         },4000);
         setTimeout(()=> {
-            text.textContent = 'AI Developer'
+            text.textContent = 'ML Developer'
         },8000);
-        setTimeout(()=> {
-            text.textContent = 'Student'
-        },12000);
     }
     textLoad();
     setInterval(textLoad,12000);
