--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,7 +20,7 @@
 
        <div>
         <header>
-            <a href="/" class="logo">Ajiboye William</a>
+            <a href="/" class="logo"><span class="first-name">William</span>Ajiboye</a>
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About" >About</a></li>
@@ -83,33 +86,38 @@
 
     </section>
 
-    <section id="Projects">
-        <div><h2>COMING SOOOOON!!!</h2></div>
+    <section id="Projects" class="coming-soon">
+        <div><h2>Projects</h2><br><h2 class="glitch-text">COMING SOOOOON!!!</h2></div>
     </section>
 
-    <section id="Experiences">
-        <div><h2>COMING SOOOOON!!!</h2></div>
+    <section id="Experiences" class="coming-soon">
+        <div><h2>Experiences</h2><br><h2 class="glitch-text">COMING SOOOOON!!!</h2></div>
     </section>
 
     <section id="Contact">
-        <div id="form">
-            <form id='contactmeform' method="post" action="/">
-                <div class="">
-                    <h2>CONTACT ME</h2>
-                    <label for="Name">Name</label>
-                    <input id="Name" name="Name" type="text" required/>
-                    <br/>
-                    <label for="Email">Email</label>
-                    <input id="Email" name="Email" type="text" required>
-                    <br/>
-                    <label for="Message">Message</label>
-                    <input id="Message" name="Message", type="text" required>
-                    <br/>
-                    <button id="submitButton" type="submit">Submit</button>
-                </div>
 
+            <form id='contactmeform' method="post" action="/">
+                <h2 class="underlined-text">CONTACT ME</h2>
+                    <div class="input1">
+                    <label for="Name">Name</label><br>
+                    <input id="Name" name="Name" type="text" placeholder="Enter your Name" required/>
+                    <br/>
+                    </div>
+                    <div class="input2">
+                    <label for="Email">Email</label><br>
+                    <input id="Email" name="Email" type="text" placeholder="Enter your Email" required>
+                    <br/>
+                    </div>
+                    <div >
+                    <label for="Message">Message</label><br>
+                    <input class="input3" id="Message" name="Message" placeholder="Enter your Message" type="text" required>
+                    <br/>
+                    </div>
+
+
+                    <button id="submitButton" class="submitbutton" type="submit">Let's Connect</button>
             </form>
-        </div>
+
 
     </section>
 
@@ -119,6 +127,7 @@
                 <li><a href="https://github.com/WilliamAjiboye"><i class="bi bi-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/ajiboye-william-526533282/"><i class="bi bi-linkedin"></i></a></li>
             </ul>
+            <p>© 2024 Ajiboye William Olawale</p>
 
 
         </footer>
